@@ -1,6 +1,7 @@
 package org.jabref.gui.specialfields;
 
 import java.util.function.Function;
+import java.util.function.Supplier;
 
 import javax.swing.undo.UndoManager;
 
@@ -8,7 +9,7 @@ import javafx.scene.control.Menu;
 import javafx.scene.control.MenuItem;
 
 import org.jabref.gui.DialogService;
-import org.jabref.gui.JabRefFrame;
+import org.jabref.gui.LibraryTab;
 import org.jabref.gui.StateManager;
 import org.jabref.gui.actions.ActionFactory;
 import org.jabref.model.entry.field.SpecialField;
@@ -20,22 +21,22 @@ import de.saxsys.mvvmfx.utils.commands.Command;
 public class SpecialFieldMenuItemFactory {
     public static MenuItem getSpecialFieldSingleItem(SpecialField field,
                                                      ActionFactory factory,
-                                                     JabRefFrame frame,
+                                                     Supplier<LibraryTab> tabSupplier,
                                                      DialogService dialogService,
                                                      PreferencesService preferencesService,
                                                      UndoManager undoManager,
                                                      StateManager stateManager) {
-        SpecialFieldValueViewModel specialField = new SpecialFieldValueViewModel(field.getValues().get(0));
+        SpecialFieldValueViewModel specialField = new SpecialFieldValueViewModel(field.getValues().getFirst());
         MenuItem menuItem = factory.createMenuItem(specialField.getAction(),
                 new SpecialFieldViewModel(field, preferencesService, undoManager)
-                        .getSpecialFieldAction(field.getValues().get(0), frame, dialogService, stateManager));
+                        .getSpecialFieldAction(field.getValues().getFirst(), tabSupplier, dialogService, stateManager));
         menuItem.visibleProperty().bind(preferencesService.getSpecialFieldsPreferences().specialFieldsEnabledProperty());
         return menuItem;
     }
 
     public static Menu createSpecialFieldMenu(SpecialField field,
                                               ActionFactory factory,
-                                              JabRefFrame frame,
+                                              Supplier<LibraryTab> tabSupplier,
                                               DialogService dialogService,
                                               PreferencesService preferencesService,
                                               UndoManager undoManager,
@@ -43,7 +44,7 @@ public class SpecialFieldMenuItemFactory {
 
         return createSpecialFieldMenu(field, factory, preferencesService, undoManager, specialField ->
                 new SpecialFieldViewModel(field, preferencesService, undoManager)
-                        .getSpecialFieldAction(specialField.getValue(), frame, dialogService, stateManager));
+                        .getSpecialFieldAction(specialField.getValue(), tabSupplier, dialogService, stateManager));
     }
 
     public static Menu createSpecialFieldMenu(SpecialField field,
